@@ -1,6 +1,7 @@
 package seng202.team5.gui;
 
 import java.util.List;
+import java.util.Objects;
 import javafx.beans.value.ObservableValue;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
@@ -8,6 +9,7 @@ import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Parent;
 import javafx.scene.Scene;
+import javafx.scene.control.Button;
 import javafx.scene.control.ComboBox;
 import javafx.scene.control.Label;
 import javafx.scene.control.Slider;
@@ -15,11 +17,13 @@ import javafx.scene.control.TableColumn;
 import javafx.scene.control.TableView;
 import javafx.scene.control.TextField;
 import javafx.scene.control.ToggleButton;
+import javafx.scene.control.Tooltip;
 import javafx.scene.control.cell.PropertyValueFactory;
 import javafx.scene.input.KeyCode;
 import javafx.scene.input.KeyEvent;
-import javafx.scene.input.MouseEvent;
 import javafx.stage.Stage;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.controlsfx.control.RangeSlider;
 import seng202.team5.models.Wine;
 import seng202.team5.repository.VineyardDAO;
@@ -33,11 +37,11 @@ import seng202.team5.services.WineService;
  */
 public class DataListPageController extends PageController {
     @FXML
-    public ComboBox yearComboBox;
+    public ComboBox<String> yearComboBox;
     @FXML
-    public ComboBox regionComboBox;
+    public ComboBox<String> regionComboBox;
     @FXML
-    public ComboBox varietyComboBox;
+    public ComboBox<String> varietyComboBox;
 
     @FXML
     public Slider ratingSlider;
@@ -68,8 +72,10 @@ public class DataListPageController extends PageController {
     private TableColumn<Wine, Double> ratingColumn;
 
     @FXML
-    private TableColumn<Wine, Boolean> favouriteColumn;
+    private Button searchButton;
 
+    @FXML
+    private Button resetSearchFilterButton;
 
     @FXML
     private TextField searchTextField;
@@ -84,55 +90,38 @@ public class DataListPageController extends PageController {
     private double minRatingFilter;
     private double maxRatingFilter;
     private boolean favouriteFilter;
+    private static final Logger log = LogManager.getLogger(DataListPageController.class);
 
     /**
      * Initializes the data List by calling {@link seng202.team5.services.WineService}
      * to populate the list of wines.
      */
     @FXML
-    public void initialize() {
+    private void initialize() {
         vineyardDAO = new VineyardDAO();
         wineDAO = new WineDAO(vineyardDAO);
 
         favToggleButton.setDisable(true);
         favToggleButton.setText("Coming Soon");
 
+        varietyComboBox.setTooltip(new Tooltip("Filter by variety"));
+        regionComboBox.setTooltip(new Tooltip("Filter by region"));
+        yearComboBox.setTooltip(new Tooltip("Filter by year"));
+        priceRangeSlider.setTooltip(new Tooltip("Select a price range"));
+        ratingSlider.setTooltip(new Tooltip("Select a minimum price"));
+        searchButton.setTooltip(new Tooltip("Enter search query"));
+        resetSearchFilterButton.setTooltip(new Tooltip("Reset search query"));
 
-
-        // sets value of price/rating labels in real time
-        priceRangeSlider.highValueProperty().addListener(
-                (ObservableValue<? extends Number> num, Number oldVal, Number newVal) -> {
-                Float value = Float.valueOf(String.format("%.1f", newVal));
-                maxPriceLabel.setText(String.valueOf(value));
-            });
-        priceRangeSlider.lowValueProperty().addListener(
-                (ObservableValue<? extends Number> num, Number oldVal, Number newVal) -> {
-                Float value = Float.valueOf(String.format("%.1f", newVal));
-                minPriceLabel.setText(String.valueOf(value));
-            });
-        ratingSlider.valueProperty().addListener(
-                (ObservableValue<? extends Number> num, Number oldVal, Number newVal) -> {
-                Float value = Float.valueOf(String.format("%.1f", newVal));
-                ratingSliderValue.setText(String.valueOf(value));
-            });
-
-        // initialises listeners on sliders
-
-
-        setDefaults();
-        initializeSliderListeners();
         nameColumn.setCellValueFactory(new PropertyValueFactory<>("name"));
         priceColumn.setCellValueFactory(new PropertyValueFactory<>("price"));
         yearColumn.setCellValueFactory(new PropertyValueFactory<>("year"));
         ratingColumn.setCellValueFactory(new PropertyValueFactory<>("rating"));
-        //favouriteColumn.setCellValueFactory(new PropertyValueFactory<>("favourite"));
 
         ObservableList<Wine> wines = FXCollections.observableArrayList(WineService.getInstance()
                 .getWineList());
 
         // Add data to TableView
         wineTable.setItems(wines);
-        System.out.println(wines.size());
 
         wineTable.setOnMouseClicked(mouseEvent -> {
             if (mouseEvent.getClickCount() == 2) {
@@ -140,7 +129,7 @@ public class DataListPageController extends PageController {
                     Wine selectedWine = wineTable.getSelectionModel().getSelectedItem();
                     if (selectedWine != null) {
                         WineService.getInstance().setSelectedWine(selectedWine);
-                        openDetailedViewPage(selectedWine);
+                        openDetailedViewPage();
                     }
                 } catch (Exception e) {
                     throw new RuntimeException(e);
@@ -148,9 +137,36 @@ public class DataListPageController extends PageController {
             }
         });
 
-
-
+        // Sets up default filter buttons
+        setDefaults();
         setUpFilterButtons();
+
+        // Initialises listeners on sliders
+        initializeSliderListeners();
+        initializeSliderValueListeners();
+    }
+
+    /**
+     * Initialize listeners to change the slider values in real time to reflect
+     * the current selection.
+     */
+    private void initializeSliderValueListeners() {
+        // sets value of price/rating labels in real time
+        priceRangeSlider.highValueProperty().addListener(
+                (ObservableValue<? extends Number> num, Number oldVal, Number newVal) -> {
+                    Float value = Float.valueOf(String.format("%.1f", newVal.floatValue()));
+                    maxPriceLabel.setText(String.valueOf(value));
+                });
+        priceRangeSlider.lowValueProperty().addListener(
+                (ObservableValue<? extends Number> num, Number oldVal, Number newVal) -> {
+                    Float value = Float.valueOf(String.format("%.1f", newVal.floatValue()));
+                    minPriceLabel.setText(String.valueOf(value));
+                });
+        ratingSlider.valueProperty().addListener(
+                (ObservableValue<? extends Number> num, Number oldVal, Number newVal) -> {
+                    Float value = Float.valueOf(String.format("%.1f", newVal.floatValue()));
+                    ratingSliderValue.setText(String.valueOf(value));
+                });
     }
 
     /**
@@ -159,22 +175,19 @@ public class DataListPageController extends PageController {
     private void initializeSliderListeners() {
         priceRangeSlider.highValueProperty().addListener(
                 (ObservableValue<? extends Number> num, Number oldVal, Number newVal) -> {
-                Float value = Float.valueOf(String.format("%.1f", newVal));
-                maxPriceFilter = value;
+                maxPriceFilter = Float.parseFloat(String.format("%.1f", newVal.floatValue()));
                 applySearchFilters();
             });
 
         priceRangeSlider.lowValueProperty().addListener(
                 (ObservableValue<? extends Number> num, Number oldVal, Number newVal) -> {
-                Float value = Float.valueOf(String.format("%.1f", newVal));
-                minPriceFilter = value;
+                minPriceFilter = Float.parseFloat(String.format("%.1f", newVal.floatValue()));
                 applySearchFilters();
             });
 
         ratingSlider.valueProperty().addListener(
                 (ObservableValue<? extends Number> num, Number oldVal, Number newVal) -> {
-                Float value = Float.valueOf(String.format("%.1f", newVal));
-                minRatingFilter = value;
+                minRatingFilter = Float.parseFloat(String.format("%.1f", newVal.floatValue()));
                 applySearchFilters();
             });
     }
@@ -186,19 +199,19 @@ public class DataListPageController extends PageController {
         List<String> yearOptions = wineDAO.getYear();
         ObservableList<String> observableYearList =
                 FXCollections.observableArrayList(yearOptions);
-        observableYearList.add(0, "Year");
+        observableYearList.addFirst("Year");
         yearComboBox.setItems(observableYearList);
 
         List<String> regionOptions = vineyardDAO.getRegions();
         ObservableList<String> observableRegionsList =
                 FXCollections.observableArrayList(regionOptions);
-        observableRegionsList.add(0, "Region");
+        observableRegionsList.addFirst("Region");
         regionComboBox.setItems(observableRegionsList);
 
         List<String> varietyOptions = wineDAO.getVariety();
         ObservableList<String> observableVarietyList =
                 FXCollections.observableArrayList(varietyOptions);
-        observableVarietyList.add(0, "Variety");
+        observableVarietyList.addFirst("Variety");
         varietyComboBox.setItems(observableVarietyList);
     }
 
@@ -230,9 +243,8 @@ public class DataListPageController extends PageController {
      * to display on table.
      */
     @FXML
-    public void searchClicked() {
+    private void searchClicked() {
         String searching = searchTextField.getText();
-        System.out.println(searching);
         applySearchFilters();
     }
 
@@ -255,7 +267,7 @@ public class DataListPageController extends PageController {
      * @param event KeyEvent that triggered the method, pressing of a key
      */
     @FXML
-    public void enterPressed(KeyEvent event) {
+    private void enterPressed(KeyEvent event) {
         if (event.getCode() == KeyCode.ENTER) {
             searchClicked();
         }
@@ -266,10 +278,9 @@ public class DataListPageController extends PageController {
      */
     public void onVarietyComboBoxClicked() {
         String selectedVariety = String.valueOf(varietyComboBox.getValue());
-        if (!(selectedVariety == "Variety" || selectedVariety == null)) {
+        if (!(Objects.equals(selectedVariety, "Variety") || selectedVariety == null)) {
             varietyFilter = selectedVariety;
         }
-        System.out.println(varietyFilter);
         applySearchFilters();
     }
 
@@ -278,7 +289,7 @@ public class DataListPageController extends PageController {
      */
     public void onRegionComboBoxClicked() {
         String selectedRegion = String.valueOf(regionComboBox.getValue());
-        if (!(selectedRegion == "Region" || selectedRegion == null)) {
+        if (!(Objects.equals(selectedRegion, "Region") || selectedRegion == null)) {
             regionFilter = selectedRegion;
         }
         applySearchFilters();
@@ -290,7 +301,7 @@ public class DataListPageController extends PageController {
     public void onYearComboBoxClicked() {
         //TODO: come back to - string vs int
         String selectedYear = String.valueOf(yearComboBox.getValue());
-        if (!(selectedYear == "Year" || selectedYear == null)) {
+        if (!(Objects.equals(selectedYear, "Year") || selectedYear == null)) {
             yearFilter = selectedYear;
         }
         applySearchFilters();
@@ -302,7 +313,7 @@ public class DataListPageController extends PageController {
      */
     public void onFavToggleButtonClicked() {
         boolean isFavourited = favToggleButton.isSelected();
-        if (isFavourited != false) {
+        if (isFavourited) {
             favouriteFilter = true;
         }
         applySearchFilters();
@@ -319,9 +330,9 @@ public class DataListPageController extends PageController {
         setDefaults();
         ObservableList<Wine> observableWines = FXCollections.observableArrayList(wineDAO.getAll());
         wineTable.setItems(observableWines);
-        varietyComboBox.setValue(varietyComboBox.getItems().get(0));
-        regionComboBox.setValue(regionComboBox.getItems().get(0));
-        yearComboBox.setValue(yearComboBox.getItems().get(0));
+        varietyComboBox.setValue(varietyComboBox.getItems().getFirst());
+        regionComboBox.setValue(regionComboBox.getItems().getFirst());
+        yearComboBox.setValue(yearComboBox.getItems().getFirst());
 
         favToggleButton.setSelected(false);
     }
@@ -329,9 +340,8 @@ public class DataListPageController extends PageController {
     /**
      * Opens detailed wine view page for the wine that was double-clicked.
      *
-     * @param selectedWine the currently selected wine
      */
-    private void openDetailedViewPage(Wine selectedWine) {
+    private void openDetailedViewPage() {
         try {
             FXMLLoader loader = new FXMLLoader(
                     getClass().getResource("/fxml/DetailedViewPage.fxml"));
@@ -347,8 +357,7 @@ public class DataListPageController extends PageController {
             stage.setScene(scene);
             stage.show();
         } catch (Exception e) {
-            System.out.println(e);
-            e.printStackTrace();
+            log.error(e);
         }
     }
 
